Fix for labels shifted to the right that Stacy found

--- a/app/assets/stylesheets/plan.scss
+++ b/app/assets/stylesheets/plan.scss
@@ -182,7 +182,7 @@
       justify-content: flex-end;
       text-align: right;
       transform-origin: right;
-      transform: rotate(-45deg);
+      transform: translate(-45%) rotate(-45deg);
       white-space: nowrap;
     }
   }
